
add_executable(test1 test1.c)
target_link_libraries(test1 popt)

add_executable(test2 test2.c)
target_link_libraries(test2 popt)

add_executable(test3 test3.c)
target_link_libraries(test3 popt)

add_executable(tdict tdict.c)
target_link_libraries(tdict popt)

#TODO: Actually being able to run these would be a good idea


